2009-03-14  Alberto Garcia  <agarcia@igalia.com>

	* src/userconfig.c
	* src/util.h
	* src/util.c
	(xml_add_string, xml_add_bool, xml_get_string, xml_get_bool):
	Moved from userconfig.c to util.c, as they're useful for other
	modules too.

2009-03-13  Alberto Garcia  <agarcia@igalia.com>

	* TRANSLATORS
	* po/LINGUAS
	* po/pl.po
	* src/uimisc.c (ui_about_dialog):
	Added Polish translation, by Dawid Pakuła

2009-03-06  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_play_similarartist_radio):
	Use current artist (if any) as default value in the "Artists
	similar to" dialog.

	This closes feature request #3575

2009-03-06  Alberto Garcia  <agarcia@igalia.com>

	* src/Makefile.am
	* src/marshal.list
	* src/controller.c (vgl_controller_class_init):
	Define a new 'playback-progress' signal to be emitted by the
	controller.

	* src/vgl-main-window.h
	* src/vgl-main-window.c (vgl_main_window_new)
	(vgl_main_window_controller_progress_cb)
	* src/controller.h
	* src/controller.c (controller_update_progress)
	(controller_audio_started_cb, controller_run_app):
	Control the main window's progress bar using the
	'playback-progress' signal.

2009-02-26  Alberto Garcia  <agarcia@igalia.com>

	Merged changes from the 0.7.1 release:

	* vagalume.spec
	* debian/changelog: Update RPM spec and Debian/changelog

	* configure.ac: Update version number

	* NEWS: Update NEWS file

2009-02-26  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.c (lastfm_request_playlist)
	(lastfm_request_custom_playlist): Set version to 1.5 when
	requesting playlists.

2009-02-26  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h
	* src/controller.c (controller_start_playing_cb)
	* src/protocol.c (lastfm_parse_track, lastfm_parse_playlist):
	Send session cookie in all mp3 requests.

2009-02-24  Alberto Garcia  <agarcia@igalia.com>

	* src/protocol.h
	* src/protocol.c
	(lastfm_set_radio):
	Store the radio title returned in the 'stationname' parameter.